Stop horizontal scroll

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -964,13 +964,6 @@ body:not(.post-template) .post-title {
     border: none;
 }
 
-/* Stop elements, such as img wider than the post content, from
-   creating horizontal scroll - slight hack due to imperfections
-   with browser width % calculations and rounding */
-.post-template .content {
-    overflow: hidden;
-}
-
 /* Tweak the .post wrapper style */
 .post-template .post {
     margin-top: 0;
@@ -987,7 +980,7 @@ body:not(.post-template) .post-title {
    text column to break out. */
 .post-content img {
     display: block;
-    max-width: 126%;
+    max-width: 100%;
     height: auto;
     padding: 0.6em 0;
     /* Centers an image by (1) pushing its left edge to the
@@ -1809,7 +1802,6 @@ body:not(.post-template) .post-title {
     .post-content img {
         padding: 0;
         min-width: 0;
-        max-width: 112%; /* fallback when calc doesn't work */
     }
 
     .post-meta {
